Fix Nav Alignment Issue on Mobile

--- a/assets/css/components/_nav.scss
+++ b/assets/css/components/_nav.scss
@@ -78,6 +78,9 @@
 }
 
 @media (max-width: 768px) {
+  .navbar {
+    align-items: center;
+  }
   .navbar ul {
     flex-direction: column;
     width: 100%;
